# Basic-Shell

./: .gitignore  CMakeLists.txt  README.md  SHELL.h  main.cpp  note.txt  run-myshell.sh  s.bashrc  test  test.cpp  test.py
include/: built_in.hpp  builtins.hpp  executor.hpp  headers.hpp  lexer.hpp  parser.hpp  pipeline.hpp  shell.hpp
src/: builti_in.cpp  builtins.cpp  executor.cpp  lexer.cpp  main.cpp  parser.cpp  shell.cpp
